--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 
 dependencies:
   build: ^1.1.6
-  source_gen: ^0.9.4+4
+  source_gen:
   hive: ">=1.3.0 <2.0.0"
-  analyzer: ">=0.36.0 <0.40.0"
+  analyzer:
   dartx: ^0.2.0
 
 dev_dependencies:
